--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -13,12 +13,13 @@
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server": "json-server -p3002 --watch db.json",
+    "server": "json-server -p3001 --watch db.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
